k8s-manifests/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuro-backend
  namespace: kuro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuro-backend
  template:
    metadata:
      labels:
        app: kuro-backend
    spec:
      # Nunca ejecutar pods como root
      securityContext:
        runAsNonRoot: true
      containers:
        - name: backend
          image: davidnicanor123/kuro-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: kurocustom.uk
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: kurocustom.uk
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "512Mi"
