k8s-manifests/05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuro-frontend
  namespace: kuro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuro-frontend
  template:
    metadata:
      labels:
        app: kuro-frontend
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: frontend
          image: davidnicanor123/kuro-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
