k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuro-frontend
  namespace: kuro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuro-frontend
  template:
    metadata:
      labels:
        app: kuro-frontend
    spec:
      containers:
        - name: frontend
          image: davidnicanor123/kuro-frontend:1.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
